# transport-for-maf

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  railway.toml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: agent.py  config.py  main.py  memory_setup.py  tfl_client.py
backend/app/tools/: transport.py
backend/tests/: conftest.py  test_data_pipeline.py
backend/tests/e2e/: test_smoke.py
backend/tests/integration/: test_api_endpoints.py  test_neo4j_graph.py
backend/tests/unit/: test_agent.py  test_config.py  test_memory_setup.py  test_tfl_client.py  test_transport_tools.py
cypher/: sample_queries.cypher  schema.cypher
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/__tests__/: groupToolCalls.test.ts  sessionPersistence.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: LineStatusBanner.tsx
frontend/src/components/chat/: ChatPanel.tsx
frontend/src/components/detail/: DetailPanel.tsx
frontend/src/components/graph/: MemoryGraphView.tsx  TransportGraphView.tsx
frontend/src/components/map/: TransportMap.tsx
frontend/src/lib/: api.ts  chatUtils.ts  graphStyles.ts  types.ts
frontend/src/store/: useAppStore.ts
img/: agent-tool-flow-diagram.excalidraw  architecture-diagram.excalidraw  memory-types-diagram.excalidraw
scripts/: download_tfl_data.py  load_graph.py  pyproject.toml
